# bokger

./: .gitignore  README.md  build.sh  build_and_upload_to_pypi.sh  pyproject.toml  setup.py  test.sh
.github/workflows/: publish.yml
bokger/: Database.py  Logger.py  OpTable.py  __init__.py  _at_enter.py  _at_exit.py  _dec_io_and_time.py  dec.py
bokger/models/: CopyToClipboard.js  CopyToClipboardButton.py  DownloadCsvButton.py  DownloadFile.js  DownloadFileButton.py  DownloadTxt.js  DownloadTxtButton.py  __init__.py
bokger/utilities/: Caller.py  TimeStamp.py
tests/: test_dec.py  test_exception.py  test_init.py  test_latex.py  test_log.py  test_source.py
